--- a/color-corr.html
+++ b/color-corr.html
@@ -210,7 +210,56 @@
     </div>
 
     <!-- Crustacean Species -->
-    <div id="crustacean-container"></div>
+    <div class="crtcn-space"></div>
+    <div class="crtcn-cntr">
+        <div class="crtcn-grid">
+            <div class="crtcn-item">          
+                <img class="crtcn-img" src="images/species/dungeness_crab.png">
+                <div class="overlay-img">
+                    <div class="overlay-content">
+                        <div class="crtcn-name">Dungeness Crab</div>
+                        <div class="crtcn-desc">An oval-shaped carapace that is yellow-brown to purplish. They have four pairs of walking legs and a pair of claws.</div>
+                    </div>
+                </div>
+            </div>  
+            <div class="crtcn-item">
+                <img class="crtcn-img" src="images/species/fiddler_crab.jpg">
+                <div class="overlay-img">
+                    <div class="overlay-content">
+                        <div class="crtcn-name">Fiddler Crab</div>
+                        <div class="crtcn-desc">Are small, semi-terrestrial crabs are characterized by extreme cheliped asymmetry in males.</div>
+                    </div>
+                </div>
+            </div>
+            <div class="crtcn-item">
+                <img class="crtcn-img" src="images/species/hermit_crab.jpg">
+                <div class="overlay-img">
+                    <div class="overlay-content">
+                        <div class="crtcn-name">Hermit Crab</div>
+                        <div class="crtcn-desc">A soft exoskeleton and a twisted abdomen to fit into snail shells.</div>
+                    </div>
+                </div>
+            </div>
+            <div class="crtcn-item">
+                <img class="crtcn-img" src="images/species/king_crab.jpg">
+                <div class="overlay-img">
+                    <div class="overlay-content">
+                        <div class="crtcn-name">King Crab</div>
+                        <div class="crtcn-desc">They range in color from brownish to bluish red and are covered in sharp spines. They have three pairs of walking legs and one pair of claws.</div>
+                    </div>
+                </div>
+            </div>
+            <div class="crtcn-item">
+                <img class="crtcn-img" src="images/species/rock_crab.jpg">
+                <div class="overlay-img">
+                    <div class="overlay-content">
+                        <div class="crtcn-name">Rock Crab</div>
+                        <div class="crtcn-desc">A wide carapace that is quite smooth to the touch and two large claws of equal size with black tips.</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <!-- Footer -->
     <div class="footer">
@@ -221,6 +270,5 @@
 
     <!-- JS Links -->
     <script src="scripts/pop-out-image.js"></script>
-    <script src="scripts/crustacean-species.js"></script>
 </body>
 </html>
